[package]
name = "omniosint"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
colored = "2.0"
async-trait = "0.1"  
regex = "1.12.2"
trust-dns-resolver = "0.23.2"
dotenv = "0.15.0"
