[package]
name = "omniosint"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "socks", "blocking", "multipart"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4.4", features = ["derive"] }
async-trait = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
trust-dns-resolver = "0.23.2"
regex = "1.10"
colored = "2.0"
dotenv = "0.15.0"
md5 = "0.7"
hex = "0.4"
rand = "0.9.2"
